--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@ jobs:
         with:
           php-version: "8.2"
 
-      - name: Install dependencies (production)
-        run: |
-          composer install \
-            --no-dev \
-            --optimize-autoloader \
-            --prefer-dist
+      # - name: Install dependencies (production)
+        # run: |
+        #   composer install \
+        #     --no-dev \
+        #     --optimize-autoloader \
+        #     --prefer-dist
 
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
